[package]
name = "tower-http-digest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["time"] }
tower = "0.4.13"
http = "0.2.8"
pin-project = "1.0.12"
base64 = "0.13.1"
http-body = "1.0.0-rc1"
bytes = "1.3.0"
http-body-util = "0.1.0-rc.1"
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }