[package]
name = "axum-digest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower-http = { version = "0.3", features = ["map-request-body", "util"] }
hyper = "0.14"
axum = "0.6.0-rc.5"
http-signature-normalization = "0.6.0"
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
base64 = "0.13.1"