[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-signature-normalization-reqwest = "0.7.1"
tokio = { version = "1", default-features = false, features = [ "rt-multi-thread", "macros"] }
sha2 = "0.10.6"
reqwest = "0.11.13"
thiserror = "1.0.37"
base64 = "0.20.0-alpha.1"
pretty_env_logger = "0.4.0"